// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Value Renderer link simple onClick 1`] = `
<button
  className="euiLink euiLink--primary"
  onClick={[Function]}
  type="button"
>
  value
</button>
`;

exports[`Value Renderer link with content and color 1`] = `
<button
  className="euiLink euiLink--warning"
  onClick={[Function]}
  type="button"
>
  VALUE
</button>
`;
